fix: overflow modal

--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@
     }
 
     .modal {
-        @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white h-1/2 w-1/2 max-xl:w-[80%] z-[9999] rounded-2xl shadow-lg overflow-y-auto
+        @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white h-1/2 w-1/2 max-xl:w-[80%] z-[9999] rounded-2xl shadow-lg overflow-y-hidden
     }
 
     .modal .modal-header {
